--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@datastax/astra-db-ts": "^1.5.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.9"
+    "multer": "^1.4.5-lts.1"
   }
 }
